--- a/main-page.html
+++ b/main-page.html
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <div class="flex items-center justify-between border-t border-default pt-4 md:pt-6">
-                            <button onclick="saveCard()"
+                            <button type="button" onclick="saveCard()"
                                 class="inline-flex items-center bg-emerald-700 text-white bg-brand hover:bg-brand-strong box-border border border-transparent focus:ring-4 focus:ring-brand-medium shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">
                                 <svg class="w-4 h-4 me-1.5 -ms-0.5" aria-hidden="true"
                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -291,9 +291,9 @@
                     <!-- Modal header -->
                     <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
                         <h3 class="text-lg font-medium text-heading">
-                            Create new Destination
+                            Update The Destination
                         </h3>
-                        <button onclick="closeModal()" type="button"
+                        <button onclick="closeEditModal()" type="button"
                             class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
                             data-modal-hide="crud-modal">
                             <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
@@ -310,28 +310,28 @@
                             <div class="col-span-2">
                                 <label for="inputTitle"
                                     class="block mb-2.5 text-sm font-medium text-heading">Title</label>
-                                <input id="inputTitle" type="text" name="title" id="title"
+                                <input id="editTitle" type="text" name="title" id="title"
                                     class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                     placeholder="Type title" required="">
                             </div>
                             <div class="col-span-2">
                                 <label for="inputAuthor"
                                     class="block mb-2.5 text-sm font-medium text-heading">Author</label>
-                                <input id="inputAuthor" type="text" name="author" id="name"
+                                <input id="editAuthor" type="text" name="author" id="name"
                                     class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                     placeholder="Type author" required="">
                             </div>
                             <div class="col-span-2">
                                 <label for="inputLocation"
                                     class="block mb-2.5 text-sm font-medium text-heading">Location</label>
-                                <input id="inputLocation" type="text" name="location" id="name"
+                                <input id="editLocation" type="text" name="location" id="name"
                                     class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                     placeholder="Type location" required="">
                             </div>
                             <div class="col-span-2">
                                 <label for="inputTime" class="block mb-2.5 text-sm font-medium text-heading">Reading
                                     Time</label>
-                                <input id="inputTime" type="text" name="readingtime" id="name"
+                                <input id="editTime" type="text" name="readingtime" id="name"
                                     class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body"
                                     placeholder="Reading time (minutes)" required="">
                             </div>
@@ -339,7 +339,7 @@
                             <div class="col-span-2">
                                 <label for="inputCategory"
                                     class="block mb-2.5 text-sm font-medium text-heading">Category</label>
-                                <select id="inputCategory"
+                                <select id="editCategory"
                                     class="block w-full px-3 py-2.5 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand px-3 py-2.5 shadow-xs placeholder:text-body">
                                     <option selected="">Select category</option>
                                     <option value="Forests">Forest</option>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="col-span-2">
                                 <label class="block mb-2.5 text-sm font-medium">Image</label>
-                                <select id="inputImage"
+                                <select id="editImage"
                                     class="block w-full px-3 py-2.5 border rounded-base overflow-y-auto">
                                     <option value="images/yellow-river.jpg">Yellow River</option>
                                     <option value="images/iceland.jpg">Iceland</option>
@@ -363,23 +363,17 @@
                             <div class="col-span-2">
                                 <label for="inputDescription"
                                     class="block mb-2.5 text-sm font-medium text-heading">Description</label>
-                                <textarea id="inputDescription" rows="4"
+                                <textarea id="editDescription" rows="4"
                                     class="block bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full p-3.5 shadow-xs placeholder:text-body"
                                     placeholder="Write destination description here"></textarea>
                             </div>
                         </div>
                         <div class="flex items-center justify-between border-t border-default pt-4 md:pt-6">
-                            <button onclick="saveCard()"
+                            <button id="saveEditedCard"
                                 class="inline-flex items-center bg-emerald-700 text-white bg-brand hover:bg-brand-strong box-border border border-transparent focus:ring-4 focus:ring-brand-medium shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">
-                                <svg class="w-4 h-4 me-1.5 -ms-0.5" aria-hidden="true"
-                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                                    viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2" d="M5 12h14m-7 7V5" />
-                                </svg>
-                                Add new card
+                                Update the card
                             </button>
-                            <button onclick="closeModal()" data-modal-hide="crud-modal" type="button"
+                            <button onclick="closeEditModal()" data-modal-hide="crud-modal" type="button"
                                 class="text-body bg-neutral-secondary-medium box-border border border-default-medium hover:bg-neutral-tertiary-medium hover:text-heading focus:ring-4 focus:ring-neutral-tertiary shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">Cancel</button>
                         </div>
                     </form>
@@ -392,7 +386,7 @@
         <!-- Delete Card Modal -->
 
 
-        <div id="popup-modal" tabindex="-1"
+        <div id="delete-modal" tabindex="-1"
             class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/40">
             <div class="relative p-4 w-full max-w-md max-h-full">
                 <div class="relative bg-gray-100 border border-default rounded-base shadow-sm p-4 md:p-6">
@@ -414,7 +408,7 @@
                         </svg>
                         <h3 class="mb-6 text-body">Are you sure you want to delete this product from your account?</h3>
                         <div class="flex items-center space-x-4 justify-center">
-                            <button data-modal-hide="popup-modal" type="button"
+                            <button id="deleteButton" data-modal-hide="popup-modal" type="button"
                                 class="text-white bg-red-600 box-border border border-transparent hover:bg-danger-strong focus:ring-4 focus:ring-danger-medium shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">
                                 Yes, I'm sure
                             </button>
@@ -431,8 +425,11 @@
 
 
     </main>
-    <div id="toast"
+    <div id="add-message"
         class="hidden fixed top-10 right-8 -translate-x-1/2 bg-emerald-700 text-white px-6 py-3 rounded-lg shadow-lg z-50">
+    </div>
+        <div id="delete-message"
+        class="hidden fixed top-10 right-8 -translate-x-1/2 bg-red-600 text-white px-6 py-3 rounded-lg shadow-lg z-50">
     </div>
     <!-- NAVBAR -->
     <div
