update navbar elements

--- a/details.html
+++ b/details.html
@@ -43,7 +43,7 @@
 
             <a class="flex gap-2 items-center">
                 <i class="fa-solid fa-heart text-3xl"></i>
-                <h1 class="font-bold">Notifications</h1>
+                <h1 class="font-bold">Favourites</h1>
             </a>
 
             <a href="profile.html" class="flex gap-2 items-center">
